# code-review

./: .gitignore  AGENTS.md  README.md
cli/: README.md  pyproject.toml
cli/src/cli/: __init__.py  __main__.py
web/: .env  .env.example  .gitignore  .npmrc  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  docker-entrypoint.sh  opencode.json  package.json  pnpm-lock.yaml  pyproject.toml
web/.claude/: settings.local.json
web/components/ui/: _styles.py  _types.py  accordion.py  alert.py  breadcrumb.py  card.py  checkbox.py  combobox.py  dialog.py  dropdown_menu.py  input.py  modal.py  navbar.py  pagination.py  popover.py  radio_group.py  section.py  select.py  skeleton.py  slider.py  switch.py  table.py  tabs.py  textarea.py  toast.py
web/core/: __init__.py  settings.py  urls.py
web/staticfiles/css/: custom.css  input.css  theme.css
web/web/: admin.py  github.py  models.py  opencode_client.py  services.py  tasks.py  tests.py  urls.py  views.py
web/web/management/commands/: opencode_probe.py
web/web/migrations/: 0001_initial.py  0002_githubapp_userapikey_and_more.py  0003_ruleset_owner.py  0004_chatmessage_hidden_at_chatmessage_is_hidden.py  0005_reviewrun_timestamps_and_indexes.py  0006_remove_reviewrun_reviewrun_status_created_idx_and_more.py
